--- a/package.json
+++ b/package.json
@@ -4,7 +4,16 @@
   "description": "A conference call implementation using WebRTC, Socket.io and Node.js.",
   "main": "src/app.js",
   "dependencies": {
+    "@aws-sdk/eventstream-marshaller": "^3.15.0",
+    "@aws-sdk/util-utf8-node": "^3.13.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.1",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "microphone-stream": "^5.0.1",
+    "query-string": "^7.0.0",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.4.0"
   },
@@ -14,20 +23,29 @@
   "scripts": {
     "watch": "nodemon --watch \"src/\" --exec \"node src/app.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node ./src/app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/amirsanni/livestream-server.git"
+    "start": "node ./src/app.js",
+    "dev": "nodemon ./src/app.js",
+    "build": "browserify ./src/assets/js/main.js -o ./src/assets/js/bundle.js -d"
   },
   "keywords": [
     "LiveStream",
     "Server"
   ],
-  "author": "Amir Sanni <amirsanni@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/amirsanni/livestream-server/issues"
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "@babel/env"
+          ]
+        }
+      ]
+    ]
   },
-  "homepage": "https://github.com/amirsanni/livestream-server#readme"
+  "author": "Tanyaradzwa Shammah Matasva",
+  "bugs": {
+    "url": "tmatasva@my.bridgeport.edu"
+  },
+  "homepage": "https://vicomeet.com"
 }
